--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.0.0",
@@ -25,6 +24,5 @@
     "globals": "^15.15.0",
     "vite": "^6.2.0",
     "vite-plugin-gh-pages": "^1.0.1"
-  },
-  "homepage": "https://ricky-rubin.github.io/First-React-Project"
+  }
 }
